fixed right border issue, header issue upon mobile version, social media footer responsiveness. New issues: The col value on the table no longer appears to function. No matter what size one renders the viewport, i card per block is displayed.

--- a/css/index.less
+++ b/css/index.less
@@ -86,7 +86,7 @@ input {
   background-color: #cce5f9;
   width: 100%;
   bottom: 0;
-
+  height: 150px;
 }
 
 #footerHeader {
@@ -96,32 +96,6 @@ input {
   font-family: 'Bungee Inline', cursive;
 }
 
-.fancy {
-  line-height: 0.5;
-  text-align: center;
-}
-.fancy span {
-  display: inline-block;
-  position: relative;
-}
-.fancy span:before,
-.fancy span:after {
-  content: "";
-  position: absolute;
-  height: 5px;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  top: 0;
-  width: 50%;
-}
-.fancy span:before {
-  right: 100%;
-  margin-right: 15px;
-}
-.fancy span:after {
-  left: 100%;
-  margin-left: 15px;
-}
 
 #social-media-outer {
 	height: 84px;
@@ -135,12 +109,17 @@ input {
 
 .row {
   margin: 0 auto;
+  padding-left: 0px;
 }
 
 ul#horizontal-list {
 	list-style: none;
 	padding-top: 20px;
   text-align: center;
+  width: 100%;
+  margin-right: 0px;
+  margin-left: 0px;
+  overflow: hidden;
 }
 
 ul#horizontal-list li {
@@ -154,11 +133,10 @@ ul#horizontal-list li {
 }
 
 /*---MOBILE---*/
-@media only screen and (max-device-width: 480px) {
+@media screen and (max-width: 500px) {
   body {
     font-family: Arial;
     height: 100%;
-
   }
 
   html {
@@ -194,9 +172,10 @@ ul#horizontal-list li {
     text-align: center;
     margin: auto;
     font-family: 'Lobster', cursive;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bolder;
     vertical-align: middle;
+    padding-top: 17px;
   }
 
   #form {
@@ -205,10 +184,7 @@ ul#horizontal-list li {
   }
 
   #container {
-
     width: 100%;
-
-
   }
 
 
@@ -254,32 +230,6 @@ ul#horizontal-list li {
     font-family: 'Bungee Inline', cursive;
   }
 
-  .fancy {
-    line-height: 0.5;
-    text-align: center;
-  }
-  .fancy span {
-    display: inline-block;
-    position: relative;
-  }
-  .fancy span:before,
-  .fancy span:after {
-    content: "";
-    position: absolute;
-    height: 5px;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-    top: 0;
-    width: 50%;
-  }
-  .fancy span:before {
-    right: 100%;
-    margin-right: 15px;
-  }
-  .fancy span:after {
-    left: 100%;
-    margin-left: 15px;
-  }
 
   #social-media-outer {
   	height: 84px;
@@ -307,7 +257,7 @@ ul#horizontal-list li {
 
   .icon {
     width: 100%;
-    max-width: 4em;
-    max-height: 4em;
+    max-width: 1.91rem;
+    max-height: 1.91rem;
   }
 }
